@@ -100,6 +100,7 @@ E(OP_MercenaryDataResponse)
 E(OP_GuildMemberUpdate)
 E(OP_GMLastName)
 E(OP_BeginCast)
+E(OP_RezzRequest)
 //list of packets we need to decode on the way in:
 D(OP_SetServerFilter)
 D(OP_CharacterCreate)
@@ -156,5 +157,6 @@ D(OP_GuildRemove)
 D(OP_GuildStatus)
 D(OP_Trader)
 D(OP_GMLastName)
+D(OP_RezzAnswer)
 #undef E
 #undef D
